# RAG

./: .gitignore  GEMINI.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cli/: main.py
rag/: acl_rules.py  acl_rules.yaml  acl_runtime.py  answer.py  api.py  auth.py  chunking.py  compressor.py  config.py  embeddings.py  hybrid.py  ingest.py  lexical_es.py  llm.py  logger.py  pipeline.py  query_decomposer.py  query_enhancer.py  rerank.py  retrieval.py  users.py  vector_store.py
search/: es_client.py  es_service.py
support_function/: detect_function.py
