[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_project"
version = "0.1.2a1"
description = "Local RAG stack for Human Design knowledge base"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "pydantic>=2.7",
  "python-docx>=1.1.0",
  "pdfplumber>=0.11.0",
  "pymupdf>=1.24.0",
  "unidecode>=1.3.8",
  "tqdm>=4.66.0",
  "sentence-transformers>=2.6.0",
  "torch>=2.2",
  "chromadb>=0.5.0",
  "rank-bm25>=0.2.2",
  "openai>=1.37.0",
  "httpx>=0.27.0",
  "colorama>=0.4.6",
  "elasticsearch>=8,<9",
  "requests>=2.31",
  "python-dotenv>=1.0.0",
]

[project.scripts]
rag-cli = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*", "cli*", "search*", "support_function*"]

[tool.setuptools.package-data]
rag = ["acl_rules.yaml"]
